--- a/body-style.css
+++ b/body-style.css
@@ -42,9 +42,9 @@ input {border: none;box-sizing: border-box;}
 #main-nav-wrapper .widget {position: static;}
 #main-nav {float: left;}
 #mobile-menu-btn {display: none;}
-#main-nav .icon {color: #fff;}
+#main-nav .icon {color: #fff;font-size: 2rem;}
 #main-nav .widget-content>ul>li {float: left;margin-right: 5px;color: #fff;line-height: 63px;}
-#main-nav .widget-content>ul>li>a {padding: 12px 15px;border-radius: 3px;font-size: 0.975rem;font-weight: 700;text-transform: uppercase;}
+#main-nav .widget-content>ul>li>a {padding: 19px 15px;border-radius: 3px;font-size: 0.975rem;font-weight: 700;}
 #main-nav .widget-content>ul>li>a:hover {background-color: #21759b;}
 #main-nav .widget-content>ul>li>a:hover+.mega-menu-wrapper {display: block;}
 .mega-icon:after {content: '\25be';}
@@ -57,6 +57,8 @@ input {border: none;box-sizing: border-box;}
 .mega-post:last-child {margin-right: 0 !important;}
 .mega_post-image {display: block;width: 100%;height: 180px;margin-bottom: 10px;border: 2px solid #747474;}
 .mega_post-title {font-family: Arial,Georgia,Serif;font-weight: 700;line-height: 1.7;}
+.stickyHeader {width: 100%}
+.fixed {position: fixed;top:0;z-index: 9;}
 /*--SearchBox--*/
 .search-btn{float:right;position: relative;right: 45px;top:12px;left:0px;border-radius: 3px;background-color:  #3a3c3e;width: 44px;height: 39px;cursor: pointer;-ms-user-select: none;-moz-user-select: none;-webkit-user-select: none;user-select: none;}
 .search-btn:before {position: absolute;content: '';border-radius: 50%;border: 3px solid #fff;width: 12px;height: 12px;top: 12px;left: 14px;}
@@ -145,9 +147,18 @@ div#___plusone_0 {width: 185px !important;}
 .status-msg-bg {background-color: #f7f7f7;}
 /*--Sidebar--*/
 .sidebar-wrapper {float: right;width: 30%;}
-.sidebar-wrapper .widget {margin-bottom: 25px;}
-.sidebar-wrapper .widget > h2 {background-color: #464646;padding: 10px 0;text-align: center;border-bottom: 4px solid #21759b;margin-bottom: 20px;font-size: 0.875rem;font-weight: 700;text-transform: uppercase;color: #fff;}
+.sidebar-wrapper .widget {margin-bottom: 20px;}
+.sidebar-wrapper .widget > h2 {padding: 10px 0;text-align: center;margin-bottom: 20px;font-size: 0.975rem;font-weight: 700;text-transform: uppercase;background-color: #eaeaea;}
 .sidebar-wrapper .widget > h2:before {font-size: 1.7rem;position: absolute;bottom: -25px;left: 50%;margin-left: -8px;color: #21759b;}
+/*--SidebarTabs--*/
+.sidebartabs-wrapper {margin-bottom: 20px;}
+.sidebartabs {position: relative;width: 100%;background-color: #464646;font-size: 0.875rem;font-weight: 700;text-transform: uppercase;margin-bottom: 20px;color: #fff;}
+.sidebartab-item {width: 50%;text-align: center;padding: 12px 5px;cursor: pointer;}
+#sidebartab-item1 {float: left;}
+#sidebartab-item2 {float: right;}
+.sidebartabs-wrapper .section .widget:last-child {display: none;}
+.activetab {background-color: #21759b;}
+.sidebartabs-wrapper .widget > h2 {display: none;}
 /*--TagLabel--*/
 .cloud-label-widget-content {text-align: inherit !important;}
 .label-size {line-height: 1.2;text-transform: capitalize;font-size: 0.875rem;color: #909090;opacity: 1;}
@@ -161,7 +172,7 @@ div#___plusone_0 {width: 185px !important;}
 .PopularPosts .widget-content li:first-child {padding-top: 0;}
 .PopularPosts .widget-content li:last-child {border-bottom: 0;padding-bottom: 0;}
 .PopularPosts .item-thumbnail {float: none;display: table-cell;}
-.PopularPosts .item-thumbnail img {width: 150px;height: 75px;padding-right: 0 !important;border: 2px solid #fff;border-radius: 5%;}
+.PopularPosts .item-thumbnail img {width: 145px;height: 75px;padding-right: 0 !important;border: 1px solid #fff;border-radius: 5%;}
 .PopularPosts .item-thumbnail img:hover {border-color: #21759b;}
 .PopularPosts .item-title {padding-left: 13px;display: table-cell;vertical-align: middle;line-height: 1.5;font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;text-transform: capitalize;}
 .PopularPosts .item-title a:hover {color: #21759b;}
@@ -169,7 +180,7 @@ div#___plusone_0 {width: 185px !important;}
 .random-posts .post-wrapper {padding: 10px 0 !important;}
 .random-posts .post-wrapper:first-child {padding-top: 0 !important;}
 .random-posts .post-wrapper:last-child {border-bottom: 0;padding-bottom: 0;}
-.random_post-image {position: relative;float: left;width: 150px;height: 75px;margin-right: 10px;border: 2px solid #fff;border-radius: 5%;z-index: 2;}
+.random_post-image {position: relative;float: left;width: 145px;height: 75px;margin-right: 10px;border: 1px solid #fff;border-radius: 5%;z-index: 2;}
 .random_post-image:hover {border-color: #21759b !important;}
 .random_post-title {font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;line-height: 1.5;text-transform: capitalize;}
 .random_post-title:hover {color: #21759b;}
@@ -178,22 +189,14 @@ div#___plusone_0 {width: 185px !important;}
 /*--RecentPosts--*/
 .recent-post-item {display: table;padding: 10px 0 !important;}
 .recent-post-item:first-child {padding-top: 0 !important;}
-.recentposts .post-image {position: relative;display: table-cell;width: 150px;height: 75px;border: 2px solid #fff;border-radius: 5%;z-index: 2;}
+.recentposts .post-image {position: relative;display: table-cell;width: 145px;height: 75px;border: 1px solid #fff;border-radius: 5%;z-index: 2;}
 .recentposts .post-title {display: table-cell;vertical-align: middle;padding-left: 10px;font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;line-height: 1.5;text-transform: capitalize;}
 .recentposts .heading:hover {color: #21759b;}
 .recentposts .post-image:hover {border-color: #21759b !important;}
-/*--SidebarTabs--*/
-.sidebartabs-wrapper {margin-bottom: 20px;}
-.sidebartabs {position: relative;width: 100%;background-color: #464646;font-size: 0.875rem;font-weight: 700;text-transform: uppercase;margin-bottom: 20px;color: #fff;}
-.sidebartab-item {width: 50%;text-align: center;padding: 12px 5px;cursor: pointer;}
-#sidebartab-item1 {float: left;}
-#sidebartab-item2 {float: right;}
-.sidebartabs-wrapper .section .widget:last-child {display: none;}
-.activetab {background-color: #21759b;}
-.sidebartabs-wrapper .widget > h2 {display: none;}
 /*--Footer--*/
 #footer-wrapper {background: #333333;color: #A1A1A1;padding: 30px 0 0;}
 #footer-copyright {padding: 2px 0 5px;text-align: center;font-family: Arial,Georgia,Serif;}
+#footer-copyright a{color:#21759b;}
 #footer-wrapper .container > .section {float: left;width: 30%;margin-right: 5%;}
 #footer-right {margin-right: 0 !important;}
 #footer-wrapper .widget > h2 {margin-bottom: 25px;text-transform: uppercase;color: #FFFFFF;border-bottom: 3px solid #21759b;position: relative;text-align: center;width: 100%;}
@@ -218,18 +221,6 @@ blockquote:before {display: block;content: "\201C";font-size: 80px;position: abs
 .btn {display: inline-block;padding: 4px 12px;margin: 0 5px 5px 0;font-size: 14px;font-weight: 400;line-height: 22px;text-align: center;outline: none;white-space: nowrap;vertical-align: middle;cursor: pointer;background-image: none;background-color: #888;color: #fff !important;position: relative;}
 .btn.btn_large {padding: 12px 18px;font-size: 18px;line-height: 26px;}
 .btn.btn_small {padding: 2px 6px;font-size: 11px;line-height: 20px;}
-.orange {background-color: orange;}
-.forestgreen {background-color: forestgreen;}
-.dimgray {background-color: dimgray;}
-.deeppink {background-color: deeppink;}
-.darkorange {background-color: darkorange;}
-.darkgreen {background-color: darkgreen;}
-.darkmagenta {background-color: darkmagenta;}
-.darkgoldenrod {background-color: darkgoldenrod;}
-.cornflowerblue {background-color: cornflowerblue;}
-.cadetblue {background-color: cadetblue;}
-.brown {background-color: brown;}
-.blueviolet {background-color: blueviolet;}
 .alert {position: relative;padding: 15px;margin-bottom: 20px;color: #fff;}
 .alert.alert_green {background-color: #7ab55c;}
 .alert.alert_blue {background-color: #2980b9;}
@@ -289,7 +280,8 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .meta-social-icons{font-size:15px}
 .meta-social-icons a:hover{background:#21759b;}
 /*--FollowByMail--*/
-.follow-by-email {font-size: 0.875rem;line-height: 1.7;margin-bottom: 15px;}
+.follow-by-email {font-size: 0.975rem;line-height: 1.4;margin-bottom: 15px;}
+.follow-by-email a {color:#21759b}
 .follow-by-email-address{color: rgb(47,46,78);width: 100%;display: block;height: 40px;font-size: 14px;border: none;background-color: #f7f7f7;padding-left: 45px;margin-top:1em;border-bottom: 2px solid #5F5F5F;border-top: 0;}
 .follow-by-email-submit {width: 100%;margin-top:.5em;margin-left: 1px;font-weight:20;font-size:2.5rem;border: 1;border-radius: 2px;-moz-border-radius: 2px;background: #21759b;color: #fff;cursor: pointer;font-size: 16px;height: 40px;z-index: 0;}
 /*--SocialShare--*/
@@ -323,13 +315,13 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .contact-form-button-submit {width: 100%;margin: 0;border: 0;border-radius: 2px;-moz-border-radius: 2px;background: #000;background: #21759b;color: #fff;cursor: pointer;font-size: 13px;height: 33px;}
 /*--AboutUs--*/
 .about-frame {width: 100%;overflow: hidden;}
-.about-tag {float: left;width: 60%;}
+.about-tag {float: left;width: 60%;line-height: 1.4;}
 .about-tag a{color: #21759b;}
 .image-tag{float: left;width: 30%;}
 .image-tag img{border-radius: 25%;}
 .item-control{font-size: 18px;}
 /*--TopHeaderText--*/
-#header-line{width:700px;height:80px;padding:25px 30px 0 5px;margin:0 auto;text-align:center;}
+#header-line{width:700px;height:80px;padding:30px 40px 15px 5px;margin:0 auto;text-align:center;}
 #header-line p1{font:normal 40pt Georgia;color:#49a942;text-shadow: 0 1px 0 #ccc,0 2px 0 #c9c9c9,0 3px 0 #bbb,0 4px 0 #b9b9b9,0 5px 0 #aaa,0 6px 1px rgba(0,0,0,.1),0 0 5px rgba(0,0,0,.1),0 1px 3px rgba(0,0,0,.3),0 3px 5px rgba(0,0,0,.2),0 5px 10px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.15);
 }
 #header-line p1:hover{color:#f57d00;}
@@ -337,7 +329,7 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 
 .zigzag{width:100%;background:url(https://1.bp.blogspot.com/-c2mlo58IzsU/V7L4Rx0_OVI/AAAAAAAAFTc/KXvUy8Wo8ZolhFI7vaqvdJMVQKnrVdPXgCLcB/s1600/zigzag.png) top repeat-x;height:20px;position:relative;}
 #zigzag-header{top:-65px;}
-#zigzag-footer{bottom:-15px}
+#zigzag-footer{bottom:-15px;}
 /*--MediaResolution--*/
 @media only screen and (max-width: 1200px) {
 .container {width: 96%;}
@@ -414,6 +406,7 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 #footer-wrapper {padding: 0;font-size: 10px;}
 }
 @media only screen and (max-width: 288px) {
+.read-more {padding: 16px;}
 .searchbox{display: none;}
 .read-more {width:100%;}
 }
