--- a/body-style.css
+++ b/body-style.css
@@ -24,8 +24,11 @@ input {border: none;box-sizing: border-box;}
 .widget li {padding: 0;}
 .widget ul {padding: 0;}
 .widget-item-control {display: none !important;}
-.entry-content h2, .entry-content h3, .entry-content h4 {font-weight: bold;margin-bottom: 10px;font-family: Arial,Georgia,Serif;}
+.entry-content h2, .entry-content h3, .entry-content h4 {font-weight: bold;margin-bottom: 10px;margin-top: 10px;font-family: Arial,Georgia,Serif;}
 .entry-content {font-size: 1rem;}
+.entry-content h2 {font-size:1.5rem;}
+.entry-content h3{font-size:1.2rem;}
+.entry-content h4 {font-size:1.1rem;}
 .entry-content a{color: #21759b;}
 /*--Loader--*/
 .no-js #loader {display: none;}
