--- a/body-style.css
+++ b/body-style.css
@@ -30,6 +30,7 @@ input {border: none;box-sizing: border-box;}
 .entry-content h3{font-size:1.2rem;}
 .entry-content h4 {font-size:1.1rem;}
 .entry-content a{color: #21759b;}
+.entry-content b{font-weight: bold;}
 /*--Loader--*/
 .no-js #loader {display: none;}
 .js #loader {display: block;position: absolute;top: 0;}
